--- a/docs/source/_themes/pywm/static/style.css
+++ b/docs/source/_themes/pywm/static/style.css
@@ -1,5 +1,5 @@
 /*
- * This file's is a stylesheet for the pwm theme. 
+ * This file's is a custom stylesheet.
  * The original file's header is:
  *
  *   sphinxdoc.css_t
@@ -18,22 +18,61 @@
 /* -- page layout ----------------------------------------------------------- */
 
 body {
-    font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva',
+    font-family: 'Open Sans', 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva',
                  'Verdana', sans-serif;
     font-size: 14px;
-    letter-spacing: -0.01em;
-    line-height: 150%;
+
+    line-height: 130%;
     text-align: center;
-    background-color: #e6d2b5;
-    background-color: #e5d8b2;
-    background-image:  url(background.png);
-    background-repeat: repeat-x; 
+    background-image:  url(bodybg.png);
     color: black;
     padding: 0;
-    border: 1px solid #aaa;
-
+    border: 1px solid #422;
+    /*
     margin: 0px 20px 0px 20px;
-    min-width: 650px;
+    */
+    margin: 0 auto;
+    min-width: 680px;
+    max-width: 1000px;
+}
+
+.pageheader {
+    background-image: url(headerbg.png);
+    text-align: left;
+    padding: 3px 0 0 10px;
+}
+
+.pageheader ul {
+    float: right;
+    color: white;
+    list-style-type: none;
+    padding-left: 0;
+    margin-top: 40px;
+    margin-right: 10px;
+    font-size: 15px;
+}
+
+.pageheader li {
+    float: left;
+    margin: 0 0 0 10px;
+    margin: 0;
+}
+
+.pageheader li a {
+    border-radius: 1px;
+    padding: 1em 1em 1em 1em;
+    padding: 8px 12px;
+    color: #f9f9f0;
+    color: #fff;
+    text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+    text-shadow: 0 0 5px #000; 
+}
+
+.pageheader li a:hover {
+    background-color: #f9f9f0;
+    background-color: #fff;
+    color: #0a507a;
+    text-shadow: none;
 }
 
 div.document {
@@ -53,21 +92,21 @@ div.body {
     padding: 0.5em 20px 20px 20px;
 }
 
+/***** Related ******/
+
 div.related {
-    font-size: 1em;
+    background-image: url(relbg.png);
+    font-size: 1.1em;
 }
 
 div.related ul {
-    background-image: url(navigation.png);
-    height: 2em;
-    border-top: 1px solid #ddd;
-    border-bottom: 1px solid #ddd;
+    height: 1.6em;
+    border-top: 1px solid #262;
 }
 
 div.related ul li {
     margin: 0;
     padding: 0;
-    height: 2em;
     float: left;
 }
 
@@ -78,14 +117,20 @@ div.related ul li.right {
 
 div.related ul li a {
     margin: 0;
-    padding: 0 5px 0 5px;
-    line-height: 1.75em;
-    color: #EE9816;
+    padding: 0 5px 0 15px;
+    line-height: 1.6em;
+    color: #f7ffc5;
+    color: #fcffe3;
+    color: #eaee8c;
+    color: #f4f6c9;
+    color: #feffe1;
 }
 
-div.related ul li a:hover {
-    color: #3CA8E7;
+div.related a:hover {
+    color: #f9b370;
 }
+
+/***** Sidebar ******/
 
 div.sphinxsidebarwrapper {
     padding: 0;
@@ -113,6 +158,7 @@ div.sphinxsidebar h3, div.sphinxsidebar h4 {
     border: 1px solid #000000;
 */
     background-color: #AFC1C4;
+    background-color: #c0c0c0;
     max-width: 150px;
 }
 
@@ -137,18 +183,50 @@ div.sphinxsidebar input {
 }
 
 div.footer {
-    background-color: #E3EFF1;
-    background-color: #fff7df;
-    color: #86989B;
+    background-color: #bdb;
+    color: #000;
     padding: 3px 8px 3px 0;
     clear: both;
-    font-size: 0.8em;
     text-align: right;
+    font-size: 80%;
+    line-height: 100%;
 }
 
 div.footer a {
-    color: #86989B;
+    color: #060;
     text-decoration: underline;
+}
+
+div.footer a:hover {
+    color: #0a0;    
+/*
+    text-decoration: underline;
+*/
+}
+
+.source-click-above {
+    /* Use for link to source code file above the "literalinclude" directive. */
+       
+    /*
+    border: 1px solid #422;
+    font-style: italic;
+    */
+    margin-top: 0.2em;
+    margin-bottom: -0.4em;
+    text-align: right;
+    line-height: 0;
+    font-size: 85%;
+}
+
+.source-click-below {
+    /* Use for link to source code file below the "literalinclude" directive. */
+    /*
+    font-style: italic;
+    */
+    text-align: right;
+    line-height: 0;
+    margin-top: -0.55em;
+    font-size: 85%;
 }
 
 /* -- body styles ----------------------------------------------------------- */
@@ -158,12 +236,12 @@ p {
 }
 
 a {
-    color: #CA7900;
+    color: #050;
     text-decoration: none;
 }
 
 a:hover {
-    color: #2491CF;
+    color: #3b3;
 }
 
 div.body a {
@@ -174,7 +252,7 @@ h1 {
     margin: 0;
     padding: 0.7em 0 0.3em 0;
     font-size: 1.5em;
-    color: #11557C;
+    color: #497049;
 }
 
 h2 {
@@ -231,7 +309,7 @@ cite, code, tt {
 }
 
 tt {
-    background-color: #f2f2f2;
+    background-color: #e0f3e0;
     border-bottom: 1px solid #ddd;
     color: #333;
 }
@@ -247,11 +325,11 @@ hr {
 
 a tt {
     border: 0;
-    color: #CA7900;
+    color: inherit;
 }
 
 a tt:hover {
-    color: #2491CF;
+    color: inherit;
 }
 
 pre {
@@ -262,7 +340,7 @@ pre {
     line-height: 120%;
     padding: 0.5em;
     border: 1px solid #ccc;
-    background-color: #f8f8f8;
+    background-color: #f9fff9;
 }
 
 pre a {
@@ -275,7 +353,7 @@ td.linenos pre {
 }
 
 div.quotebar {
-    background-color: #f8f8f8;
+    background-color: #f9fff9;
     max-width: 250px;
     float: right;
     padding: 2px 7px;
@@ -283,7 +361,7 @@ div.quotebar {
 }
 
 div.topic {
-    background-color: #f8f8f8;
+    background-color: #f9fff9;
 }
 
 table {
@@ -357,7 +435,15 @@ div.viewcode-block:target {
     border-bottom: 1px solid #ac9;
 }
 
+
 /* Styling for the search box. */
+.searchtip {
+    font-size: 90%;
+    line-height: 100%;
+/*
+    max-width: 20%;
+*/
+}
 .search-input {
 /*
     background-color: blue;
